changed jquery reference to local copy instead of http (not secure) google hosted server location

--- a/player/index.html
+++ b/player/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Home Sports Bar - Landing</title>
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="/js/jquery-1.11.2.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function () {
 			$("#location").html(window.location.host)
