--- a/player/four.html
+++ b/player/four.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Home Sports Bar</title>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="/js/jquery-1.11.2.min.js"></script>
 	<script type="text/javascript">
 		_frames = 4
 	</script>
