--- a/player/test.html
+++ b/player/test.html
@@ -1,21 +1,21 @@
 <html>
 <head>
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript">
-$(document).ready(function() {
-	$("#test_link").click(function() {
-		post_data = {"frames": 1}
-		
-		$.post("/api/subscribe", post_data)
-			.done(function (response) {
-				var frame = response["frame"]
-				var url = response["url"]
-				
-				$("#test_results").html("response received\nframe: " + response["frame"] + "\nurl: " + response["url"])
-			})
+	<script src="/js/jquery-1.11.2.min.js"></script>
+	<script type="text/javascript">
+	$(document).ready(function() {
+		$("#test_link").click(function() {
+			post_data = {"frames": 1}
+			
+			$.post("/api/subscribe", post_data)
+				.done(function (response) {
+					var frame = response["frame"]
+					var url = response["url"]
+					
+					$("#test_results").html("response received\nframe: " + response["frame"] + "\nurl: " + response["url"])
+				})
+		})
 	})
-})
-</script>
+	</script>
 
 </head>
 <body>
