--- a/remote/remote.html
+++ b/remote/remote.html
@@ -201,7 +201,7 @@
 		}
 
 	</style>
-	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="/js/jquery-1.11.2.min.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function() {
 		// $(".network").click(function() {
