updated index.html to link to players and remote guide, additionally rearranging order of networks

--- a/index.html
+++ b/index.html
@@ -101,18 +101,18 @@
 <body>
 
 	<div>
-		<a href="single-screen.html">launch single screen</a>
+		<a href="/player/one.html">launch single screen</a>
 	</div>
 	<div>
-		<a href="two-screens.html">launch home sports bar (two screens)</a>
+		<a href="/player/two-across.html">launch two screens (side-by-side)</a>
 	</div>
-	<div>
+	<!-- <div>
 		<a href="two-screens-vertical.html">launch home sports bar (two screens vertical)</a>
-	</div>
+	</div> -->
 	<div>
-		<a href="home-sports-bar.html">launch home sports bar (four screens)</a>
+		<a href="/player/four.html">launch four screens</a>
 	</div>
-	<div>
+	<!-- <div>
 		<a href="six-screens.html">launch home sports bar (six screens)</a>
 	</div>
 	<div>
@@ -120,7 +120,12 @@
 	</div>
 	<div>
 		<a href="landing.html">launch landing</a>
+	</div> -->
+	<div>
+		<a href="/remote/guide.html">launch remote with guide</a>
 	</div>
-
+	<div>
+		<a href="https://chrome.google.com/webstore/detail/home-sports-bar/ohjimdcbgkhokanedmekipbgjcnackaf">extension for google chrome in order to work</a>
+	</div>
 </body>
 </html>
