adjusted code for setting headers

--- a/chrome-app/browser/browser.html
+++ b/chrome-app/browser/browser.html
@@ -41,10 +41,10 @@
   <body>
 
 	<div id="webview-1-title"></div>
-	<div id="webview-1-overlay">
+	<!--<div id="webview-1-overlay">
 		<a href="index.html" target="webview-1">&#215;</a>
-	</div>	
-    <webview id="webview-1" src="http://watch.diynetwork.com/live.html" style="width:1280px; height:720px"></webview>
+	</div>	-->
+    <webview id="webview-1" src="http://xfinitytv.comcast.net/live/network/foxsports1?cmpid=chrome_ext_1" style="width:1280px; height:720px"></webview>
     <!--<webview id="webview-2" src="http://watch.foodnetwork.com/live.html" style="width:640px; height:720px; left:640px"></webview>-->
 
   </body>
