--- a/chrome-app/browser/browser.html
+++ b/chrome-app/browser/browser.html
@@ -36,6 +36,10 @@
 			font-weight: bold;
 			text-shadow: 0px 0px 3px #111111;
 		}
+
+		#webview-1::-webkit-scrollbar {
+			display: none;
+		}
 	</style>
 
   <body>
