--- a/remote/guide.html
+++ b/remote/guide.html
@@ -24,6 +24,7 @@
 		<li><a href="#one" id="numFrames-1"><div><p>1</p></div></a></li>
 		<li><a href="#two" id="numFrames-2"><div><p>2</p></div></a></li>
 		<li><a href="#four" id="numFrames-4"><div><p>4</p></div></a></li>
+		<li><a href="#eight" id="numFrames-8"><div><p>8</p></div></a></li>
 	</ul>
 	<ul id="frames">
 	</ul>
