fixed extension for fsgo, updated links in two/four

--- a/player/four.html
+++ b/player/four.html
@@ -135,29 +135,29 @@
 	</style>
 </head>
 <body>
-	<iframe id="frame-1" name="frame-1" src="/landing.html"></iframe>
-	<iframe id="frame-2" name="frame-2" src="/landing.html"></iframe>
-	<iframe id="frame-3" name="frame-3" src="/landing.html"></iframe>
-	<iframe id="frame-4" name="frame-4" src="/landing.html"></iframe>
+	<iframe id="frame-1" name="frame-1" src="/remote/channels.html"></iframe>
+	<iframe id="frame-2" name="frame-2" src="/remote/channels.html"></iframe>
+	<iframe id="frame-3" name="frame-3" src="/remote/channels.html"></iframe>
+	<iframe id="frame-4" name="frame-4" src="/remote/channels.html"></iframe>
 
 	<div id="frame-1-overlay">
-		<a href="/landing.html" target="frame-1">&#215;</a>
-	</div>	
+		<a href="/remote/channels.html" target="frame-1">&#215;</a>
+	</div>
 	<div id="frame-2-overlay">
-		<a href="/landing.html" target="frame-2">&#215;</a>
-	</div>	
+		<a href="/remote/channels.html" target="frame-2">&#215;</a>
+	</div>
 	<div id="frame-3-overlay">
-		<a href="/landing.html" target="frame-3">&#215;</a>
-	</div>	
+		<a href="/remote/channels.html" target="frame-3">&#215;</a>
+	</div>
 	<div id="frame-4-overlay">
-		<a href="/landing.html" target="frame-4">&#215;</a>
-	</div>	
+		<a href="/remote/channels.html" target="frame-4">&#215;</a>
+	</div>
 
 	<div id="frame-1-title"></div>
 	<div id="frame-2-title"></div>
 	<div id="frame-3-title"></div>
 	<div id="frame-4-title"></div>
-	
+
 	<div id="startup">
 		<p style="color: #FFFFFF; text-align: center">Connect to <span style="color: yellow">http://<span id="location"></span>/remote/remote.html</span> to change this page</p>
 	</div>
