--- a/player/two-across.html
+++ b/player/two-across.html
@@ -87,19 +87,19 @@
 	</style>
 </head>
 <body>
-	<iframe id="frame-1" name="frame-1" src="/landing.html"></iframe>
-	<iframe id="frame-2" name="frame-2" src="/landing.html"></iframe>
+	<iframe id="frame-1" name="frame-1" src="/remote/channels.html"></iframe>
+	<iframe id="frame-2" name="frame-2" src="/remote/channels.html"></iframe>
 
 	<div id="frame-1-overlay">
-		<a href="/landing.html" target="frame-1">&#215;</a>
-	</div>	
+		<a href="/remote/channels.html" target="frame-1">&#215;</a>
+	</div>
 	<div id="frame-2-overlay">
-		<a href="/landing.html" target="frame-2">&#215;</a>
-	</div>	
+		<a href="/remote/channels.html" target="frame-2">&#215;</a>
+	</div>
 
 	<div id="frame-1-title"></div>
 	<div id="frame-2-title"></div>
-	
+
 	<div id="startup">
 		<p style="color: #FFFFFF; text-align: center">Connect to <span style="color: yellow">http://<span id="location"></span>/remote/remote.html</span> to change this page</p>
 	</div>
