adjusted overflow to hiding scroll bar in chrome app

--- a/chrome-app/browser/browser.html
+++ b/chrome-app/browser/browser.html
@@ -168,7 +168,7 @@
 	</style>
 
   <body>
-  	<canvas id="canvas-test" width="1280" height="720" style="z-index: 10; position: fixed; top: 0px; left: 0px;"></canvas>
+  	<canvas id="canvas-test" width="1280" height="720" style="z-index: 10; position: fixed; top: 0px; left: 0px; -webkit-app-region: drag;"></canvas>
 
 	<div id="webview-1-title"></div>
 	<!--<div id="webview-1-overlay">
