--- a/remote/guide.html
+++ b/remote/guide.html
@@ -48,6 +48,81 @@
 			<div style="" class="info">
 			</div>
 		</li>
+		<li onclick="void(0)" id="schedule" class="channel">
+			<a class="network" style="float: left;" alt="custom">
+				<div class="image">
+					<div>
+						<p style="color: #000000;">Schedule Channel</p>
+					</div>
+				</div>
+			</a>
+			<div class="sources" style="">
+				<form id="schedule-channel" style="height:70px; padding:0px; margin:0px" method="post" action="#">
+					<div style="position: relative; text-align: center; top: 50%; transform: translateY(-50%);">
+						<select name="frame">
+							<option value="1">1</option>
+							<option value="2">2</option>
+							<option value="3">3</option>
+							<option value="4">4</option>
+						</select>
+						<select name="channel">
+						</select>
+						<select name="url" style="display:none">
+						</select>
+
+
+						<select name="day">
+							<option value="0">Today</option>
+							<option value="1">Tomorrow</option>
+						</select>
+						<select name="hour">
+							<option value="0">12 AM</option>
+							<option value="1">1 AM</option>
+							<option value="2">2 AM</option>
+							<option value="3">3 AM</option>
+							<option value="4">4 AM</option>
+							<option value="5">5 AM</option>
+							<option value="6">6 AM</option>
+							<option value="7">7 AM</option>
+							<option value="8">8 AM</option>
+							<option value="9">9 AM</option>
+							<option value="10">10 AM</option>
+							<option value="11">11 AM</option>
+							<option value="12">12 PM</option>
+							<option value="13">1 PM</option>
+							<option value="14">2 PM</option>
+							<option value="15">3 PM</option>
+							<option value="16">4 PM</option>
+							<option value="17">5 PM</option>
+							<option value="18">6 PM</option>
+							<option value="19">7 PM</option>
+							<option value="20">8 PM</option>
+							<option value="21">9 PM</option>
+							<option value="22">10 PM</option>
+							<option value="23">11 PM</option>
+						</select>
+						<select name="minute">
+							<option value="0">00</option>
+							<option value="5">05</option>
+							<option value="10">10</option>
+							<option value="15">15</option>
+							<option value="20">20</option>
+							<option value="25">25</option>
+							<option value="30">30</option>
+							<option value="35">35</option>
+							<option value="40">40</option>
+							<option value="45">45</option>
+							<option value="50">50</option>
+							<option value="55">55</option>
+						</select>
+
+						<input type="submit" value="Submit" style="width:9%; border:2px #000000 solid">
+					</div>
+				</form>
+			</div>
+			<div style="" class="info">
+			</div>
+		</li>
 	</ul>
 </body>
 </html>
