--- a/chrome-app/browser/browser.html
+++ b/chrome-app/browser/browser.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="browser.css">
     <script src="jquery-1.11.2.min.js"></script>
     <script src="browser.js"></script>
+    <script src="moment.js"></script>
     <script src="canvas-test.js"></script>
 	<style>
 		iframe.screens-1 {
