updated remote urls and mls plugin

--- a/chrome-app/browser/browser.html
+++ b/chrome-app/browser/browser.html
@@ -183,11 +183,11 @@
 	<!--<div id="webview-1-overlay">
 		<a href="index.html" target="webview-1">&#215;</a>
 	</div>	-->
-    <webview id="webview-1" src="http://xfinitytv.comcast.net/live/network/foxsports1?cmpid=chrome_ext_1" style="" class="screens-1" name="82547"></webview>
-	<webview id="webview-2" src="https://peaceful-forest-5547.herokuapp.com/player/index.html" style="" class="screens-1"></webview>
-	<webview id="webview-3" src="https://peaceful-forest-5547.herokuapp.com/player/index.html" style="" class="screens-1"></webview>
-	<webview id="webview-4" src="https://peaceful-forest-5547.herokuapp.com/player/index.html" style="" class="screens-1"></webview>
-    <webview id="webview-modal" src="about:blank" style="display: none"></webview>
+    <webview id="webview-1" src="http://xfinitytv.comcast.net/live/network/foxsports1?cmpid=chrome_ext_1" style="" class="screens-1" name="82547" partition="persist:hsb-1"></webview>
+	<webview id="webview-2" src="https://peaceful-forest-5547.herokuapp.com/player/index.html" style="" class="screens-1" partition="persist:hsb-1"></webview>
+	<webview id="webview-3" src="https://peaceful-forest-5547.herokuapp.com/player/index.html" style="" class="screens-1" partition="persist:hsb-1"></webview>
+	<webview id="webview-4" src="https://peaceful-forest-5547.herokuapp.com/player/index.html" style="" class="screens-1" partition="persist:hsb-1"></webview>
+    <webview id="webview-modal" src="about:blank" style="display: none" partition="persist:hsb-1"></webview>
 
   </body>
 </html>
