trying to make mom work

--- a/remote/remote-mom.html
+++ b/remote/remote-mom.html
@@ -294,7 +294,8 @@
 				"frame": selectedFrame,
 				"url": networkUrl,
 				"alt": alt,
-				"subscriberID": subscriberID
+                "subscriberID": subscriberID,
+                "channelID": 0
 			}
 
 			console.log(post_data)
