capital letters are the bane of my existence

--- a/remote/remote-mom.html
+++ b/remote/remote-mom.html
@@ -294,8 +294,8 @@
 				"frame": selectedFrame,
 				"url": networkUrl,
 				"alt": alt,
-                "subscriberID": subscriberID,
-                "channelID": 0
+                "subscriberId": subscriberID,
+                "channelId": 0
 			}
 
 			console.log(post_data)
