added ncaa; added 2h

--- a/chrome-app/browser/browser.html
+++ b/chrome-app/browser/browser.html
@@ -88,6 +88,38 @@
 		}
 
 
+		#webview-1.screens-2h {
+			position: fixed;
+			top: 0px;
+			left: 0px;
+			height: 50%;
+			width: 100%;
+			display: inline;
+		}
+		#webview-2.screens-2h {
+			position: fixed;
+			top: 50%;
+			left: 0px;
+			height: 50%;
+			width: 100%;
+			display: inline;
+		}
+		#webview-3.screens-2h {
+			position: fixed;
+			top: 100%;
+			left: 100%;
+			height: 100%;
+			width: 100%;
+			display: none;
+		}
+		#webview-4.screens-2h {
+			position: fixed;
+			top: 100%;
+			left: 100%;
+			height: 100%;
+			width: 100%;
+			display: none;
+		}
 
 		#webview-1.screens-4 {
 			position: fixed;
