--- a/remote/guide.html
+++ b/remote/guide.html
@@ -23,6 +23,7 @@
 		<li style="float: left; position: absolute; top: 0px; left: 0px;"><a href="#back" class="numFrames-back"><div><p>&lt;</p></div></a></li>
 		<li><a href="#one" id="numFrames-1"><div><p>1</p></div></a></li>
 		<li><a href="#two" id="numFrames-2"><div><p>2</p></div></a></li>
+		<li><a href="#twoh" id="numFrames-2h"><div><p>2h</p></div></a></li>
 		<li><a href="#four" id="numFrames-4"><div><p>4</p></div></a></li>
 		<li><a href="#eight" id="numFrames-8"><div><p>8</p></div></a></li>
 	</ul>
