--- a/chrome-app/browser/browser.html
+++ b/chrome-app/browser/browser.html
@@ -5,7 +5,7 @@
     <script src="jquery-1.11.2.min.js"></script>
     <script src="browser.js"></script>
     <script src="moment.js"></script>
-    <script src="canvas-test.js"></script>
+    <!-- <script src="canvas-test.js"></script> -->
 	<style>
 		iframe.screens-1 {
 			width: 100%;
@@ -209,7 +209,7 @@
 	</style>
 
   <body>
-  	<canvas id="canvas-test" width="1280" height="720" style="z-index: 10; position: fixed; top: 0px; left: 0px; -webkit-app-region: drag;"></canvas>
+  	<canvas id="canvas-test" width="20" height="20" style="z-index: 10; position: fixed; top: 0px; left: 0px; -webkit-app-region: drag;"></canvas>
 
 	<div id="webview-1-title"></div>
 	<!--<div id="webview-1-overlay">
